org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-05-11
	- Preparations to show ontology data in view only mode.
		Initially, to show term table for a voc2rdf ontology (based on the assiciated CSV)
	
	
2009-05-07
	- implemented issue #135: preserve URIS from simple vocabularies that allready have defines URIs
	  It works as follows:
	  	- Enabled when the header label for the first column is "URI" (ignoring case) (so, no extra
	  	  check box or other GUI component for the moment)
	  	- Converter: uses a flag keyIsUri which is set to true in createDatatypeProperty if the label
	  	  of the first column is "URI"; then createIndividual uses the flag to determine the
	  	  URI for the individual to be created.
	
2009-05-06
	- fixed issue #131: use abbreviation of organization instead of authority in the web form
	
	- fixed issue 132: add (optional) on the "uri of class" label
		But, instead of adding "optional" to the label, now the "name" field is marked with the
		red star, indicating that the name of the class is required, while the label
		for the URI of the class remains as it is. To complement, a preamble in the interface
		says that "fields marked * are required" (which used to be there in a previous version, btw).
		
	- fixed issue #129:  "Convert to RDF" button below term table
	
2009-04-20
	- Config: a useDefault flag now allows to use pre-defined parameters so I can quickly
		run ontmd and voc2rdf from within eclipse. I will configure this much better, probably
		when I start using GWT 1.6.  Also renamed Main.launch to ontmd.launch and
		created voc2rdf.launch
	
	- preliminary stuff to alert the user when closing the window page.
	
	- Converter: save copy of CSV file.
	- OntMdServiceImpl.upload: upon sucessfull upload, it renames the associated CSV (if any)
	  to a name based on the final ontology URI.  This provides a convenient mechanism to use
	  the CSV version for display purposes.
	
